# arm64-nvidia

./: .gitignore
catkin_ws/devel/lib/gazebo_to_moos/: GazeboToMoos
catkin_ws/devel/lib/moos-ros-bridge/: Bridge  counter
catkin_ws/devel/lib/pkgconfig/: gazebo_to_moos.pc  moos-ros-bridge.pc
catkin_ws/src/acoustic/: CMakeLists.txt  package.xml
catkin_ws/src/acoustic/config/: compute_fft.yaml  get_sound_data.yaml  plot_streaming_data.yaml  save_data.yaml
catkin_ws/src/acoustic/launch/: check_data.launch  compute_fft.launch  get_sound_data.launch  plot_streaming_data.launch  save_data.launch
catkin_ws/src/gazebo_to_moos/: CMakeLists.txt
catkin_ws/src/gazebo_to_moos/config/: GazeboToMoos.yaml  gps_imu_localization.yaml  test.xml
catkin_ws/src/gazebo_to_moos/launch/: bridge_test.launch  robot_localization.launch  robot_localization_ver2.launch
catkin_ws/src/gazebo_to_moos/src/: GazeboToMoos.cpp  GazeboToMoos.h  pub.cpp  py_pub.py  wamv_info.h
catkin_ws/src/localization/: CMakeLists.txt  package.xml
catkin_ws/src/localization/config/: duckieboat.moos  duckieboat_bridge_params.xml  duckieboat_tank_tdoa_bridge_params.xml  heron.moos  heron_bridge_params.xml  heron_tank_tdoa_bridge_params.xml  logan.moos  test.moos
catkin_ws/src/localization/launch/: duckieboat_tank_localization.launch  heron_shimen_localization.launch  heron_tank_localization.launch  localization.launch  localization_kalman.launch  localization_kalman_duckie.launch  turtlesim_kalman.launch
catkin_ws/src/localization/src/: UTM.h  heron_heading.cpp  heron_heading.h  localization.cpp  localization.h  localization.py  localization_kalman.py  localization_kalman_1Hz.py  localization_kalman_sync.py  plot.py  plot_v2.py  to_moosrosbridge.cpp  to_moosrosbridge.cpp.bk  to_moosrosbridge.h  turtlesim_kalman.py
catkin_ws/src/moos-ros-bridge/config/: .test.xml.swp  test.xml
catkin_ws/src/moos-ros-bridge/launch/: bridge_test.launch  counter.launch
catkin_ws/src/ntu_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/ntu_msgs/msg/: HydrophoneData.msg  HydrophoneFFTData.msg  Kalman.msg  RobotStatus.msg  SyncTdoa.msg  Tdoa.msg
catkin_ws/src/razor_imu_9dof/config/: my_razor.yaml
catkin_ws/src/recorder/: CMakeLists.txt  package.xml
catkin_ws/src/signal_process/: CMakeLists.txt  package.xml
catkin_ws/src/visualization/: CMakeLists.txt  package.xml
mission_script/: duckieboat_localization.launch  duckieboat_localization_shimen.launch  duckieboat_tdoa.launch  heron_localization.launch  heron_localization_shimen.launch  heron_tdoa.launch
moos-ivp-agx/src/: CMakeLists.txt
moos-ivp-agx/src/lib_behaviors-alonzo/: CMakeLists.txt
moos-ivp-agx/src/pHelmIvP_IMU/: CMakeLists.txt  HelmIvP.cpp
moos-ivp-agx/src/pImuHeading/: CMakeLists.txt  ImuHeading.cpp  ImuHeading.h  ImuHeading_Info.cpp  ImuHeading_Info.h  main.cpp  pImuHeading.moos
moos-ivp-agx/src/pMovingPinger/: CMakeLists.txt  Pinger.cpp  Pinger.h  Pinger_Info.h
moos-ivp-agx/src/pNodeReporter_IMU/: CMakeLists.txt  NodeReporter.cpp  NodeReporter.h
moos-ivp-agx/src/pPinger/: CMakeLists.txt  Pinger.cpp  Pinger_Info.cpp  main.cpp  pPinger.moos  tdoa_angle_calculation.cpp
moos-ivp-agx/src/pSourceLocalization/: .SourceLocalization.cpp.swp  CMakeLists.txt  SourceLocalization.cpp  SourceLocalization.h  SourceLocalization_Info.h  test.cpp  test.out  test2.cpp  test_v2.cpp  test_v3.cpp
moos-ivp-agx/src/pSourceLocalizationFront/: CMakeLists.txt  SourceLocalization.cpp  SourceLocalization.h  SourceLocalization_Info.cpp  main.cpp  pSourceLocalization.moos  source_localization.cpp
moos-ivp-agx/src/pThrustControl/: .ThrustControl.cpp.swp  .ThrustControl.h.swp  CMakeLists.txt  ThrustControl.cpp  ThrustControl.h  ThrustControl_Info.cpp  ThrustControl_Info.h  main.cpp  pThrustControl.moos
ros_info/: frames.gv  node_list.txt  topic_list.txt
(+210 files in other folders)
